tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.diagnostic
diagnostic error code=P0001 family=parser message="expected : after parameter name" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari" bytes=83
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari" line=1 column=17 end_line=1 end_column=20 byte_start=16 byte_end=19 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari:1:17\n   |\n 1 | fn broken(value i64) -> i64 {\n   |                 ^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari" line=1 column=11 end_line=1 end_column=16 byte_start=10 byte_end=15 message="parameter 'value' starts here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-malformed-function-param.ari:1:11\n   |\n 1 | fn broken(value i64) -> i64 {\n   |           ^^^^^"
  Note index=0 location=none message="function parameters use `name: Type` or `PATTERN: Type` syntax"
  Help index=0 location=none message="insert : between parameter 'value' and its type"
